# FFCE

./: .gitignore  CITATION.cff  README.md  build.ps1  serve.ps1
crate/: Cargo.toml
crate/src/: ai.rs  board.rs  constants.rs  eval.rs  extras.rs  fields.rs  lib.rs  quaternion.rs
crate/tests/: extras_tests.rs  game_play.rs
site/: index.html
web/: docs.js  engine.js  ffce_engine.wasm  index.html  main.js  overlay.js  style.css  wasm_inline.js
